--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="app-footer-container" class="hide">
             <div class="row no-margin">
-                <div class="col-xs-12 no-padding text-right small">
+                <div class="col s12 no-padding text-right small">
                     <b>
               solution by Ashish Sajwan | sajwan.ashu@gmail.com | +91-8802872247
             </b>
@@ -51,7 +51,39 @@
         </div>
         <div class="col m6">
             <div id="result-gist-container">
-                we've found <b>569</b> repositories in <b>c++</b>
+                we've found <b><%=totalRepos%></b> repositories in <b><%=language%></b>
+            </div>
+        </div>
+    </div>
+</script>
+<script type="text/template" id="Tpl-body">
+    <div class="row">
+        <div class="col m8">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="email" type="email" class="validate">
+                    <label for="email" data-error="wrong" data-success="right">Email</label>
+                </div>
+            </div>
+            <div class="row" id="repo-list-container"></div>
+        </div>
+        <div class="col m4">
+        </div>
+    </div>
+</script>
+<script type="text/template" id="Tpl-repo">
+    <div class="col s12">
+        <div class="card-panel grey lighten-5 z-depth-1">
+            <div class="row valign-wrapper">
+                <div class="col s2">
+                    <img src="images/yuna.jpg" alt="" class="circle responsive-img">
+                    <!-- notice the "circle" class -->
+                </div>
+                <div class="col s10">
+                    <span class="black-text">
+This is a square image. Add the "circle" class to it to make it appear circular.
+</span>
+                </div>
             </div>
         </div>
     </div>
