--- a/index.html
+++ b/index.html
@@ -75,14 +75,11 @@
     <div class="col s12">
         <div class="card-panel grey lighten-5 z-depth-1">
             <div class="row valign-wrapper">
-                <div class="col s2">
-                    <img src="images/yuna.jpg" alt="" class="circle responsive-img">
-                    <!-- notice the "circle" class -->
+                <div class="col s1">
+                    <i class="material-icons">call_merge</i>
                 </div>
-                <div class="col s10">
-                    <span class="black-text">
-This is a square image. Add the "circle" class to it to make it appear circular.
-</span>
+                <div class="col s11">
+                    <span class="black-text"><%=full_name%></span>
                 </div>
             </div>
         </div>
