--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="import" href="templates/templates.html"> -->
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="css/materialize.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/ab16e823a6.js"></script>
     <link href="css/custom.css" rel="stylesheet" />
     <script src="js/jquery.js" type="text/javascript">
     </script>
@@ -44,12 +44,12 @@
 </body>
 <script type="text/template" id="Tpl-header">
     <div class="row">
-        <div class="col m6 s12" id="logo-container">
+        <div class="col m6" id="logo-container">
             <img class="responsive-img" src="images/githubIcon.png" width="50px" />
             <span class="big"> TopGit </span>
             <span class="small"> - finding the best github projects!</span>
         </div>
-        <div class="col m6 s12">
+        <div class="col m6">
             <div id="result-gist-container">
                 we've found <b><%=totalRepos%></b> repositories in <b><%=language%></b>
             </div>
@@ -58,16 +58,37 @@
 </script>
 <script type="text/template" id="Tpl-body">
     <div class="row">
-        <div class="col m8">
+        <div class="col m8 leftContent">
             <div class="row">
-                <div class="input-field col s12">
-                    <input id="email" type="email" class="validate">
-                    <label for="email" data-error="wrong" data-success="right">Email</label>
+                <div class="col s12">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fa fa-search prefix" aria-hidden="true"></i>
+                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <label for="autocomplete-input">Search (by language)</label>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row" id="repo-list-container"></div>
+            <div class="row" id="repo-list-container">
+                <div class=" col s12 center-align">
+                    <div class="preloader-wrapper big active">
+                        <div class="spinner-layer spinner-green-only">
+                            <div class="circle-clipper left">
+                                <div class="circle"></div>
+                            </div>
+                            <div class="gap-patch">
+                                <div class="circle"></div>
+                            </div>
+                            <div class="circle-clipper right">
+                                <div class="circle"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col m4">
+        <div class="col m4 rightContent">
         </div>
     </div>
 </script>
@@ -76,10 +97,16 @@
         <div class="card-panel grey lighten-5 z-depth-1">
             <div class="row valign-wrapper">
                 <div class="col s1">
-                    <i class="material-icons">call_merge</i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
                 <div class="col s11">
-                    <div class="repoName"><%=full_name%></div>
+                    <div class="repoName">
+                        <%=full_name%>
+                    </div>
+                    <div class="repoDetail">Language
+                        <%=language%> |
+                            <%=description%>
+                    </div>
                 </div>
             </div>
         </div>
