- languages data  - autocomplete

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="repoName">
                         <%=full_name%>
                     </div>
-                    <div class="repoDetail">Language
+                    <div class="repoDetail truncate">Language
                         <%=language%> |
                             <%=description%>
                     </div>
