--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <!-- <link rel="import" href="templates/templates.html"> -->
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="css/materialize.min.css" rel="stylesheet" />
+    <link href="css/nouislider.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/ab16e823a6.js"></script>
     <link href="css/custom.css" rel="stylesheet" />
     <script src="js/jquery.js" type="text/javascript">
     </script>
     <script src="js/materialize.min.js" type="text/javascript">
+    </script>
+    <script src="js/nouislider.js" type="text/javascript">
     </script>
     <script src="js/underscore-min.js" type="text/javascript">
     </script>
@@ -89,6 +92,22 @@
             </div>
         </div>
         <div class="col m4 rightContent">
+            <div class="row center-align rateLimit">
+                <div class="col s12">
+                    <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
+                </div>
+                <div class="col s12">
+                    8 out of 10
+                </div>
+            </div>
+            <div class="row center-align startRange">
+                <div class="col s12">
+                    <i class="fa fa-star" aria-hidden="true"></i> Stars
+                </div>
+                <div class="col s12">
+                    <div id="slider"></div>
+                </div>
+            </div>
         </div>
     </div>
 </script>
