--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </script>
 <script type="text/template" id="Tpl-body">
     <div class="row">
-        <div class="col m8 leftContent">
+        <div class="col s12 m8 leftContent">
             <div class="row">
                 <div class="col s12">
                     <div class="row">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="row" id="repo-list-container">
-                <div class=" col s12 center-align">
+                <div class=" col s12 center-align" id="loader">
                     <div class="preloader-wrapper big active">
                         <div class="spinner-layer spinner-green-only">
                             <div class="circle-clipper left">
@@ -89,25 +89,10 @@
                         </div>
                     </div>
                 </div>
+                <div id="repo-list"> </div>
             </div>
         </div>
-        <div class="col m4 rightContent">
-            <div class="row center-align rateLimit">
-                <div class="col s12">
-                    <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
-                </div>
-                <div class="col s12">
-                    8 out of 10
-                </div>
-            </div>
-            <div class="row center-align startRange">
-                <div class="col s12">
-                    <i class="fa fa-star" aria-hidden="true"></i> Stars
-                </div>
-                <div class="col s12">
-                    <div id="slider"></div>
-                </div>
-            </div>
+        <div class="col m4 hide-on-small-only rightContent">
         </div>
     </div>
 </script>
@@ -128,6 +113,25 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</script>
+<script type="text/template" id="Tpl-filter">
+    <div class="row center-align rateLimit">
+        <div class="col s12">
+            <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
+        </div>
+        <div class="col s12">
+            <%=XRateRemaining%> out of
+                <%=XRateLimit%>
+        </div>
+    </div>
+    <div class="row center-align startRange">
+        <div class="col s12">
+            <i class="fa fa-star" aria-hidden="true"></i> Stars
+        </div>
+        <div class="col s12">
+            <div id="slider"></div>
         </div>
     </div>
 </script>
