- few mobile fixes  - added mediaQuery.less

--- a/index.html
+++ b/index.html
@@ -46,13 +46,25 @@
     </div>
 </body>
 <script type="text/template" id="Tpl-header">
-    <div class="row">
+    <div class="row hide-on-small-only">
         <div class="col m6" id="logo-container">
             <img class="responsive-img" src="images/githubIcon.png" width="50px" />
             <span class="big"> TopGit </span>
             <span class="small"> - finding the best github projects!</span>
         </div>
         <div class="col m6">
+            <div id="result-gist-container">
+                we've found <b><%=totalRepos%></b> repositories in <b><%=language%></b>
+            </div>
+        </div>
+    </div>
+    <div class="row center-align hide-on-med-and-up">
+        <div class="col s12" id="logo-container">
+            <img class="responsive-img" src="images/githubIcon.png" width="50px" />
+            <span class="big"> TopGit </span>
+            <span class="small"> - finding the best github projects!</span>
+        </div>
+        <div class="col s12">
             <div id="result-gist-container">
                 we've found <b><%=totalRepos%></b> repositories in <b><%=language%></b>
             </div>
