--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
                 <div id="repo-list"> </div>
             </div>
         </div>
-        <div class="col m4 hide-on-small-only rightContent">
+        <div class="rightContent hide-on-small-only">
         </div>
+        <div class="rightContent hide-on-med-and-up">
+        </div>
+        <a href="#" data-activates="slide-out" class="button-collapse hide"><i class="material-icons">menu</i></a>
     </div>
 </script>
 <script type="text/template" id="Tpl-repo">
@@ -128,22 +131,45 @@
         </div>
     </div>
 </script>
-<script type="text/template" id="Tpl-filter">
-    <div class="row center-align rateLimit">
-        <div class="col s12">
-            <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
+<script type="text/template" id="Tpl-filterMobile">
+    <div id="slide-out" class="side-nav">
+        <div class="row center-align rateLimit">
+            <div class="col s12">
+                <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
+            </div>
+            <div class="col s12">
+                <%=XRateRemaining%> out of
+                    <%=XRateLimit%>
+            </div>
         </div>
-        <div class="col s12">
-            <%=XRateRemaining%> out of
-                <%=XRateLimit%>
+        <div class="row center-align startRange">
+            <div class="col s12">
+                <i class="fa fa-star" aria-hidden="true"></i> Stars
+            </div>
+            <div class="col s12">
+                <div class="starSlider"></div>
+            </div>
         </div>
     </div>
-    <div class="row center-align startRange">
-        <div class="col s12">
-            <i class="fa fa-star" aria-hidden="true"></i> Stars
+</script>
+<script type="text/template" id="Tpl-filter">
+    <div class="col m4">
+        <div class="row center-align rateLimit">
+            <div class="col s12">
+                <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
+            </div>
+            <div class="col s12">
+                <%=XRateRemaining%> out of
+                    <%=XRateLimit%>
+            </div>
         </div>
-        <div class="col s12">
-            <div id="slider"></div>
+        <div class="row center-align startRange">
+            <div class="col s12">
+                <i class="fa fa-star" aria-hidden="true"></i> Stars
+            </div>
+            <div class="col s12">
+                <div class="starSlider"></div>
+            </div>
         </div>
     </div>
 </script>
