--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 </script>
 <script type="text/template" id="Tpl-repo">
     <div class="col s12">
-        <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
+        <div class="card-panel grey lighten-5 z-depth-1" data-link=<%=html_url%>>
+            <div class="row">
                 <div class="col s1">
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
