- mention author and remove footer

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <title>
-        TopGit - Finding the best github projects!
+        TopGit - Finding the best github projects! - Ashish Sajwan
     </title>
+    <meta name="author" content="Ashish Sajwan | sajwan.ashu@gmail.com | 88028 722 47">
     <!-- So that Mobile Browsers Render this page as mobile friendly -->
     <meta content="width=device-width, height=device-height,initial-scale=1.0, user-scalable=no,user-scalable=0" name="viewport" />
     <!-- <link rel="import" href="templates/templates.html"> -->
@@ -33,15 +34,6 @@
         <div id="app-header-container">
         </div>
         <div id="app-body-container">
-        </div>
-        <div id="app-footer-container" class="hide">
-            <div class="row no-margin">
-                <div class="col s12 no-padding text-right small">
-                    <b>
-              solution by Ashish Sajwan | sajwan.ashu@gmail.com | +91-8802872247
-            </b>
-                </div>
-            </div>
         </div>
     </div>
 </body>
@@ -79,7 +71,7 @@
                     <div class="row">
                         <div class="input-field col s12">
                             <i class="fa fa-search prefix" aria-hidden="true"></i>
-                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <input type="text" id="autocomplete-input" class="autocomplete" value="assembly">
                             <label for="autocomplete-input">Search (by language)</label>
                         </div>
                     </div>
