--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 </body>
 <script type="text/template" id="Tpl-header">
-    <div class="row hide-on-small-only">
+    <div class="row hide-on-small-only valign-wrapper">
         <div class="col m6" id="logo-container">
             <img class="responsive-img" src="images/githubIcon.png" width="50px" />
             <span class="big"> TopGit </span>
@@ -67,14 +67,10 @@
     <div class="row">
         <div class="col s12 m8 leftContent">
             <div class="row">
-                <div class="col s12">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="fa fa-search prefix" aria-hidden="true"></i>
-                            <input type="text" id="autocomplete-input" class="autocomplete" value="assembly">
-                            <label for="autocomplete-input">Search (by language)</label>
-                        </div>
-                    </div>
+                <div class="input-field col s12">
+                    <i class="fa fa-search prefix" aria-hidden="true"></i>
+                    <input type="text" id="autocomplete-input" class="autocomplete" value="assembly">
+                    <label for="autocomplete-input">Search (by language)</label>
                 </div>
             </div>
             <div class="row" id="repo-list-container">
