--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        TopGit - Finding the best github projects! - Ashish Sajwan
+        GitHub - User Directory! - Ashish Sajwan
     </title>
     <meta name="author" content="Ashish Sajwan | sajwan.ashu@gmail.com | 88028 722 47">
     <!-- So that Mobile Browsers Render this page as mobile friendly -->
@@ -12,7 +12,7 @@
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="css/materialize.min.css" rel="stylesheet" />
     <link href="css/nouislider.css" rel="stylesheet" />
-    <script src="https://use.fontawesome.com/ab16e823a6.js"></script>
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
     <script src="js/jquery.js" type="text/javascript">
     </script>
@@ -23,6 +23,8 @@
     <script src="js/underscore-min.js" type="text/javascript">
     </script>
     <script src="js/backbone.js" type="text/javascript">
+    </script>
+    <script src="js/backbone-localstorage.js" type="text/javascript">
     </script>
     <script src="js/app.js" type="text/javascript">
     </script>
@@ -38,42 +40,31 @@
     </div>
 </body>
 <script type="text/template" id="Tpl-header">
-    <div class="row hide-on-small-only valign-wrapper">
-        <div class="col m6" id="logo-container">
-            <img class="responsive-img" src="images/githubIcon.png" width="50px" />
-            <span class="big"> TopGit </span>
-            <span class="small"> - finding the best github projects!</span>
-        </div>
-        <div class="col m6">
-            <div id="result-gist-container">
-                we've found <b><%=totalRepos%></b> repositories in <b><%=language%></b>
-            </div>
-        </div>
-    </div>
-    <div class="row center-align hide-on-med-and-up">
+    <div class="row valign-wrapper">
         <div class="col s12" id="logo-container">
             <img class="responsive-img" src="images/githubIcon.png" width="50px" />
-            <span class="big"> TopGit </span>
-            <span class="small"> - finding the best github projects!</span>
-        </div>
-        <div class="col s12">
-            <div id="result-gist-container">
-                we've found <b><%=totalRepos%></b> repositories in <b><%=language%></b>
-            </div>
+            <span class="big"> GitHub </span>
+            <span class="small"> -  finding the users on github !</span>
         </div>
     </div>
 </script>
 <script type="text/template" id="Tpl-body">
     <div class="row">
-        <div class="col s12 m8 leftContent">
-            <div class="row">
-                <div class="input-field col s12">
+        <div class="col s12">
+            <div class="row valign-wrapper">
+                <div class="input-field col s8">
                     <i class="fa fa-search prefix" aria-hidden="true"></i>
-                    <input type="text" id="autocomplete-input" class="autocomplete" value="assembly">
-                    <label for="autocomplete-input">Search (by language)</label>
+                    <input type="text" id="autocomplete-input" class="autocomplete">
+                    <label for="autocomplete-input">Search (github username)</label>
+                </div>
+                <div class="col s4 center-align">
+                    <a class="waves-effect waves-light btn" id="add-user-button">
+                        Add
+                    </a>
                 </div>
             </div>
-            <div class="row" id="repo-list-container">
+            <div class="row" id="user-list-container">
+                <div class=" col s12" id="user-list"></div>
                 <div class=" col s12 center-align" id="loader">
                     <div class="preloader-wrapper big active">
                         <div class="spinner-layer spinner-green-only">
@@ -89,74 +80,25 @@
                         </div>
                     </div>
                 </div>
-                <div id="repo-list"> </div>
-            </div>
-        </div>
-        <div class="rightContent hide-on-small-only">
-        </div>
-        <div class="rightContent hide-on-med-and-up">
-        </div>
-        <a href="#" data-activates="slide-out" class="button-collapse hide"><i class="material-icons">menu</i></a>
-    </div>
-</script>
-<script type="text/template" id="Tpl-repo">
-    <div class="col s12">
-        <div class="card-panel grey lighten-5 z-depth-1" data-link=<%=html_url%>>
-            <div class="row">
-                <div class="col s1">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
-                <div class="col s11">
-                    <div class="repoName">
-                        <%=full_name%>
-                    </div>
-                    <div class="repoDetail truncate">Language
-                        <%=language%> |
-                            <%=description%>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
 </script>
-<script type="text/template" id="Tpl-filterMobile">
-    <div id="slide-out" class="side-nav">
-        <div class="row center-align rateLimit">
-            <div class="col s12">
-                <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
-            </div>
-            <div class="col s12">
-                <%=XRateRemaining%> out of
-                    <%=XRateLimit%>
-            </div>
+<script type="text/template" id="Tpl-user">
+    <div class="card">
+        <div class="card-image">
+            <img src="<%=avatar_url%>">
+            <span class="card-title"><%=name%></span>
         </div>
-        <div class="row center-align startRange">
-            <div class="col s12">
-                <i class="fa fa-star" aria-hidden="true"></i> Stars
-            </div>
-            <div class="col s12">
-                <div class="starSlider"></div>
-            </div>
-        </div>
-    </div>
-</script>
-<script type="text/template" id="Tpl-filter">
-    <div class="col m4">
-        <div class="row center-align rateLimit">
-            <div class="col s12">
-                <i class="fa fa-list-alt" aria-hidden="true"></i> Rate Limit
-            </div>
-            <div class="col s12">
-                <%=XRateRemaining%> out of
-                    <%=XRateLimit%>
-            </div>
-        </div>
-        <div class="row center-align startRange">
-            <div class="col s12">
-                <i class="fa fa-star" aria-hidden="true"></i> Stars
-            </div>
-            <div class="col s12">
-                <div class="starSlider"></div>
+        <div class="card-content">
+            <div>
+                <ul>
+                    <li>Location :
+                        <%=location%>
+                    </li>
+                    <li> Followers :
+                        <%=followers%>
+                    </li>
             </div>
         </div>
     </div>
