- some more features

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 </script>
 <script type="text/template" id="Tpl-user">
     <div class="card">
+        <div class="removeUser"><i class="fa fa-times" aria-hidden="true"></i></div>
         <div class="card-image">
             <img src="<%=avatar_url%>">
             <span class="card-title"><%=name%></span>
