--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="input-field col s8">
                     <i class="fa fa-search prefix" aria-hidden="true"></i>
                     <input type="text" id="autocomplete-input" class="autocomplete">
-                    <label for="autocomplete-input">Search (github username)</label>
+                    <label for="autocomplete-input">Search (<small>github username</small>)</label>
                 </div>
                 <div class="col s4 center-align">
                     <a class="waves-effect waves-light btn" id="add-user-button">
